--- a/mLingo/ClientApp/src/components/AppNavbar.css
+++ b/mLingo/ClientApp/src/components/AppNavbar.css
@@ -4,23 +4,49 @@
     max-height: 40px;
   }
   .brand-text {
-    color: #222;
+    color: #ddd;
     font-weight: bold;
     font-size: 12px;
   }
 }
 @media (min-width: 768px) {
   .brand-icon {
-    max-width: 100px;
-    max-height: 100px;
+    max-width: 80px;
+    max-height: 80px;
   }
   .brand-text {
-    color: #222;
+    color: #ddd;
     font-weight: bold;
-    font-size: 28px;
+    font-size: 24px;
   }
+}
+.navbar-dark {
+  background: linear-gradient(#243553, #432552);
 }
 .navbar-brand {
   height: auto !important;
   padding: 0 10px !important;
+}
+
+.registerForm form {
+  display: flex;
+  justify-content: flex-end;
+  font-size: 16px;
+}
+
+.registerForm button {
+  font-size: 22px;
+  font-weight: bold;
+  text-shadow: 0.1em 0.1em 0.2em black;
+}
+
+.registerForm input {
+  height: 40px;
+  font-size: 18px;
+}
+
+.registerForm input:focus {
+  outline: none;
+  border: 0;
+  color: #432552;
 }
