navbar margin fix

--- a/mLingo/ClientApp/src/components/AppNavbar.css
+++ b/mLingo/ClientApp/src/components/AppNavbar.css
@@ -20,8 +20,14 @@
     font-size: 24px;
   }
 }
+.navbar {
+  margin: 0 !important;
+  border: 0 !important;
+}
+
 .navbar-dark {
   background: linear-gradient(#243553, #432552);
+  margin: 0 !important;
 }
 .navbar-brand {
   height: auto !important;
