--- a/mLingo/ClientApp/src/components/MainPageComponents/Promo.css
+++ b/mLingo/ClientApp/src/components/MainPageComponents/Promo.css
@@ -17,3 +17,34 @@ li.media {
 li.media h4 {
   font-size: 32px;
 }
+
+.help-others {
+  margin: 0 auto;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: url("../../img/slid3.jpg") fixed;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: brightness(0.5);
+  position: relative;
+  z-index: -1;
+}
+.help-others-text {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  text-shadow: 0.1em 0.1em 0.2em black;
+}
+.help-others-text h1 {
+  font-size: 52px;
+  text-align: center;
+}
+.help-others-text h3 {
+  font-size: 24px;
+}
