--- a/mLingo/ClientApp/src/components/MainPageComponents/AppNavbar.css
+++ b/mLingo/ClientApp/src/components/MainPageComponents/AppNavbar.css
@@ -46,13 +46,35 @@
   text-shadow: 0.1em 0.1em 0.2em black;
 }
 
-.registerForm input {
+.registerForm input,
+.registerForm2 input {
   height: 40px;
   font-size: 18px;
 }
 
-.registerForm input:focus {
+.registerForm input:focus,
+.registerForm2 input:focus {
   outline: none;
   border: 0;
-  color: #432552;
+}
+
+.registerForm2 {
+  padding: 10vh 0;
+}
+
+.registerForm2 h1 {
+  font-size: 38px;
+  font-weight: 100;
+}
+
+.registerForm2 form {
+  display: flex;
+  flex-wrap: wrap;
+}
+.registerForm2 button {
+  font-size: 22px;
+  font-weight: bold;
+  text-shadow: 0.1em 0.1em 0.2em black;
+  height: 60px !important;
+  border-radius: 5px;
 }
