--- a/mLingo/ClientApp/src/components/MainPageComponents/Promo.css
+++ b/mLingo/ClientApp/src/components/MainPageComponents/Promo.css
@@ -4,9 +4,20 @@
 .Promo {
   padding: 5vh 0;
 }
+@media (min-width: 968px) {
+  .Promo h1 {
+    font-size: 48px;
+  }
+}
+@media (max-width: 967px) {
+  .Promo h1 {
+    margin-bottom: 20px;
+  }
+}
+
 .Promo h1 {
-  font-size: 48px;
   text-align: center;
+  font-size: 28px;
 }
 
 li.media {
