--- a/mLingo/ClientApp/src/components/MainPageComponents/Slider.css
+++ b/mLingo/ClientApp/src/components/MainPageComponents/Slider.css
@@ -1,3 +1,12 @@
+@media (min-width: 967px) {
+  .carousel-caption h3 {
+    font-size: 32px;
+  }
+  .carousel-caption p {
+    font-size: 18px;
+  }
+}
+
 .slider {
   padding: 0px !important;
   object-fit: cover;
