User promo mobile fix

--- a/mLingo/ClientApp/src/components/MainPageComponents/Promo.css
+++ b/mLingo/ClientApp/src/components/MainPageComponents/Promo.css
@@ -8,6 +8,12 @@
   .Promo h1 {
     font-size: 48px;
   }
+  .help-others-text h1 {
+    font-size: 52px;
+  }
+  .help-others-text h3 {
+    font-size: 24px;
+  }
 }
 @media (max-width: 967px) {
   .Promo h1 {
@@ -52,10 +58,11 @@ li.media h4 {
   color: white;
   text-shadow: 0.1em 0.1em 0.2em black;
 }
+
 .help-others-text h1 {
-  font-size: 52px;
   text-align: center;
 }
 .help-others-text h3 {
-  font-size: 24px;
+  line-height: 1.6;
+  text-align: center;
 }
