--- a/mLingo/ClientApp/src/components/styles/Footer.scss
+++ b/mLingo/ClientApp/src/components/styles/Footer.scss
@@ -1,7 +1,7 @@
 @import "./variables.scss";
 
 .footer {
-  background: linear-gradient(#243553, #432552);
+  background: linear-gradient($light-color, $dark-color);
   margin: 0 !important;
   width: 100%;
   height: 20vh;
