--- a/mLingo/ClientApp/src/components/styles/css/Footer.css
+++ b/mLingo/ClientApp/src/components/styles/css/Footer.css
@@ -1,6 +1,6 @@
 .footer {
-  background: -webkit-gradient(linear, left top, left bottom, from(#243553), to(#432552));
-  background: linear-gradient(#243553, #432552);
+  background: -webkit-gradient(linear, left top, left bottom, from(#1e3799), to(#0c2461));
+  background: linear-gradient(#1e3799, #0c2461);
   margin: 0 !important;
   width: 100%;
   height: 20vh;
