--- a/mLingo/ClientApp/src/components/styles/css/Promo.css
+++ b/mLingo/ClientApp/src/components/styles/css/Promo.css
@@ -1,3 +1,38 @@
+.blue-button {
+  font-size: 22px;
+  font-weight: bold;
+  text-shadow: 0.1em 0.1em 0.2em black;
+  width: 10vw;
+  color: white;
+  background: #4a69bd;
+  border: 0;
+  border-radius: 5px;
+  height: 3vw;
+}
+
+.help-others {
+  margin: 0 auto;
+  width: 100%;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: url("../../../img/slid3.jpg") fixed;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -webkit-filter: brightness(0.5);
+          filter: brightness(0.5);
+  position: relative;
+  z-index: -1;
+}
+
 .img-media {
   max-width: 128px;
 }
@@ -37,29 +72,6 @@ li.media {
 
 li.media h4 {
   font-size: 32px;
-}
-
-.help-others {
-  margin: 0 auto;
-  width: 100%;
-  height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  background: url("../../../img/slid3.jpg") fixed;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-filter: brightness(0.5);
-  filter: brightness(0.5);
-  position: relative;
-  z-index: -1;
 }
 
 .help-others-text {
