--- a/mLingo/ClientApp/src/components/styles/css/Footer.css
+++ b/mLingo/ClientApp/src/components/styles/css/Footer.css
@@ -1,6 +1,30 @@
+.blue-button {
+  font-size: 22px;
+  font-weight: bold;
+  text-shadow: 0.1em 0.1em 0.2em black;
+  background-color: inherit;
+  border: 0;
+  color: white;
+  width: 10vw;
+  outline: none !important;
+  background: black;
+}
+
+.in-button {
+  font-size: 22px;
+  font-weight: bold;
+  text-shadow: 0.1em 0.1em 0.2em black;
+  background-color: inherit;
+  border: 0;
+  color: white;
+  width: 10vw;
+  outline: none !important;
+  background: inherit;
+}
+
 .footer {
-  background: -webkit-gradient(linear, left top, left bottom, from(#1e3799), to(#0c2461));
-  background: linear-gradient(#1e3799, #0c2461);
+  background: -webkit-gradient(linear, left top, left bottom, from(black), to(black));
+  background: linear-gradient(black, black);
   margin: 0 !important;
   width: 100%;
   height: 20vh;
