--- a/mLingo/ClientApp/src/components/styles/css/variables.css
+++ b/mLingo/ClientApp/src/components/styles/css/variables.css
@@ -2,11 +2,23 @@
   font-size: 22px;
   font-weight: bold;
   text-shadow: 0.1em 0.1em 0.2em black;
-  width: 10vw;
-  color: white;
-  background: #4a69bd;
+  background-color: inherit;
   border: 0;
-  border-radius: 5px;
-  height: 3vw;
+  color: white;
+  width: 10vw;
+  outline: none !important;
+  background: #4a69bd;
+}
+
+.in-button {
+  font-size: 22px;
+  font-weight: bold;
+  text-shadow: 0.1em 0.1em 0.2em black;
+  background-color: inherit;
+  border: 0;
+  color: white;
+  width: 10vw;
+  outline: none !important;
+  background: inherit;
 }
 /*# sourceMappingURL=variables.css.map */
