--- a/mLingo/ClientApp/src/components/styles/css/Footer.css
+++ b/mLingo/ClientApp/src/components/styles/css/Footer.css
@@ -7,7 +7,7 @@
   color: white;
   width: 10vw;
   outline: none !important;
-  background: black;
+  background: #4a69bd;
 }
 
 .in-button {
@@ -23,8 +23,8 @@
 }
 
 .footer {
-  background: -webkit-gradient(linear, left top, left bottom, from(black), to(black));
-  background: linear-gradient(black, black);
+  background: -webkit-gradient(linear, left top, left bottom, from(#1e3799), to(#0c2461));
+  background: linear-gradient(#1e3799, #0c2461);
   margin: 0 !important;
   width: 100%;
   height: 20vh;
