Modal mobile fix

--- a/mLingo/ClientApp/src/components/styles/css/Main.css
+++ b/mLingo/ClientApp/src/components/styles/css/Main.css
@@ -50,10 +50,6 @@
   opacity: 1;
 }
 
-.modal-dialog {
-  max-width: 60vw;
-}
-
 @media (max-width: 991px) {
   .brand-icon {
     max-width: 40px;
@@ -76,6 +72,9 @@
 }
 
 @media (min-width: 992px) {
+  .modal-dialog {
+    max-width: 60vw;
+  }
   .brand-icon {
     max-width: 80px;
     max-height: 80px;
@@ -162,6 +161,20 @@
 }
 
 /* 2. Slider.js */
+.carousel-sign-in {
+  position: absolute;
+  width: 30vw;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.carousel-sign-in .sign-in-button {
+  width: 100%;
+  background: #4a69bd;
+}
+
 @media (min-width: 992px) {
   .carousel-caption p {
     font-size: 18px;
@@ -177,6 +190,7 @@
      object-fit: cover;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  position: relative;
 }
 
 .carousel-item {
