--- a/mLingo/ClientApp/src/components/styles/Main.scss
+++ b/mLingo/ClientApp/src/components/styles/Main.scss
@@ -16,9 +16,6 @@
 .show {
   opacity: 1;
 }
-.modal-dialog {
-  max-width: 60vw;
-}
 
 @media (max-width: $mobile-res) {
   .brand-icon {
@@ -36,6 +33,9 @@
 }
 
 @media (min-width: $desktop-res) {
+  .modal-dialog {
+    max-width: 60vw;
+  }
   .brand-icon {
     max-width: 80px;
     max-height: 80px;
@@ -85,6 +85,20 @@
 }
 
 /* 2. Slider.js */
+
+.carousel-sign-in {
+  position: absolute;
+  width: 30vw;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  .sign-in-button {
+    width: 100%;
+    background: $light-blue;
+  }
+}
+
 @media (min-width: $desktop-res) {
   .carousel-caption {
     p {
@@ -100,6 +114,7 @@
   padding: 0px !important;
   object-fit: cover;
   box-sizing: border-box;
+  position: relative;
 }
 .carousel-item {
   background: linear-gradient($dark-color, $light-color);
