--- a/mLingo/ClientApp/src/components/styles/Main.scss
+++ b/mLingo/ClientApp/src/components/styles/Main.scss
@@ -33,12 +33,19 @@
 }
 
 @media (min-width: $desktop-res) {
+  .navbar {
+    height: 100px;
+  }
   .modal-dialog {
     max-width: 60vw;
   }
   .brand-icon {
+    position: absolute;
+    left: 10%;
+
     max-width: 80px;
     max-height: 80px;
+    animation: bounce 1s infinite ease-in-out;
   }
   .brand-text {
     font-size: 24px;
