--- a/mLingo/ClientApp/src/components/styles/css/variables.css
+++ b/mLingo/ClientApp/src/components/styles/css/variables.css
@@ -36,39 +36,39 @@
           filter: brightness(0.8);
 }
 
-@-webkit-keyframes bounce {
+@-webkit-keyframes navbar-monkey-bounce {
   0% {
-    bottom: 5%;
+    bottom: 10%;
   }
   25% {
-    bottom: 2%;
+    bottom: 7%;
   }
   50% {
-    bottom: 15%;
+    bottom: 16%;
   }
   75% {
-    bottom: 2%;
+    bottom: 7%;
   }
   100% {
-    bottom: 5%;
+    bottom: 10%;
   }
 }
 
-@keyframes bounce {
+@keyframes navbar-monkey-bounce {
   0% {
-    bottom: 5%;
+    bottom: 10%;
   }
   25% {
-    bottom: 2%;
+    bottom: 7%;
   }
   50% {
-    bottom: 15%;
+    bottom: 16%;
   }
   75% {
-    bottom: 2%;
+    bottom: 7%;
   }
   100% {
-    bottom: 5%;
+    bottom: 10%;
   }
 }
 /*# sourceMappingURL=variables.css.map */
