--- a/mLingo/ClientApp/src/components/styles/css/Main.css
+++ b/mLingo/ClientApp/src/components/styles/css/Main.css
@@ -36,39 +36,39 @@
           filter: brightness(0.8);
 }
 
-@-webkit-keyframes bounce {
+@-webkit-keyframes navbar-monkey-bounce {
   0% {
-    bottom: 5%;
+    bottom: 10%;
   }
   25% {
-    bottom: 2%;
+    bottom: 7%;
   }
   50% {
-    bottom: 15%;
+    bottom: 16%;
   }
   75% {
-    bottom: 2%;
+    bottom: 7%;
   }
   100% {
-    bottom: 5%;
+    bottom: 10%;
   }
 }
 
-@keyframes bounce {
+@keyframes navbar-monkey-bounce {
   0% {
-    bottom: 5%;
+    bottom: 10%;
   }
   25% {
-    bottom: 2%;
+    bottom: 7%;
   }
   50% {
-    bottom: 15%;
+    bottom: 16%;
   }
   75% {
-    bottom: 2%;
+    bottom: 7%;
   }
   100% {
-    bottom: 5%;
+    bottom: 10%;
   }
 }
 
@@ -116,14 +116,20 @@
   }
   .brand-icon {
     position: absolute;
-    left: 10%;
+    left: 4%;
     max-width: 80px;
     max-height: 80px;
-    -webkit-animation: bounce 1s infinite ease-in-out;
-            animation: bounce 1s infinite ease-in-out;
+    -webkit-animation: navbar-monkey-bounce 1.2s infinite ease-in-out;
+            animation: navbar-monkey-bounce 1.2s infinite ease-in-out;
   }
   .brand-text {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
     font-size: 24px;
+    text-shadow: 0.1em 0.1em 0.2em black;
   }
   .navbar-buttons {
     display: -webkit-box !important;
