--- a/mLingo/ClientApp/src/components/styles/variables.scss
+++ b/mLingo/ClientApp/src/components/styles/variables.scss
@@ -53,10 +53,13 @@ $desktop-res: 992px;
   25% {
     bottom: 7%;
   }
-  50% {
-    bottom: 16%;
+  65% {
+    bottom: 26%;
   }
-  75% {
+  70% {
+    bottom: 26%;
+  }
+  90% {
     bottom: 7%;
   }
   100% {
