--- a/mLingo/ClientApp/src/components/styles/css/variables.css
+++ b/mLingo/ClientApp/src/components/styles/css/variables.css
@@ -43,10 +43,13 @@
   25% {
     bottom: 7%;
   }
-  50% {
-    bottom: 16%;
+  65% {
+    bottom: 26%;
   }
-  75% {
+  70% {
+    bottom: 26%;
+  }
+  90% {
     bottom: 7%;
   }
   100% {
@@ -61,10 +64,13 @@
   25% {
     bottom: 7%;
   }
-  50% {
-    bottom: 16%;
+  65% {
+    bottom: 26%;
   }
-  75% {
+  70% {
+    bottom: 26%;
+  }
+  90% {
     bottom: 7%;
   }
   100% {
